--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,6 +2,6 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_edit_friends" android:title="@string/menu_edit_friends_label"></item><item android:id="@+id/action_logout" android:title="@string/menu_logout_label"></item>
-    <item android:id="@+id/action_camera" android:icon="@drawable/ic_action_camera" android:title="@string/menu_camera_label" app:showAsAction="always"></item>
+    <item android:id="@+id/action_camera" android:icon="@drawable/ic_action_camera" android:title="@string/menu_camera_label" android:showAsAction="always"></item>
 
 </menu>
