--- a/app/src/main/res/menu/recipients.xml
+++ b/app/src/main/res/menu/recipients.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_send"
         android:orderInCategory="100"
-        app:showAsAction="always"
+        android:showAsAction="always"
         android:title="@string/menu_send_label"
         android:visible="false"
         android:icon="@drawable/ic_action_send_now" />
